# omniclaude

./: .env.allowlist  .env.example  .gitignore  .markdown-link-check.json  .migration_freeze  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  mypy.ini  pyproject.toml
.claude/: architecture-handshake.md
.evidence/OMN-10539/: example_invocation_transcript.txt
.evidence/OMN-10979/: security-scanner-blocking.md
.github/scripts/: findings-to-rdjsonl.py  mypy-to-rdjsonl.py  ruff-to-rdjsonl.py
.github/workflows/: auto-merge-stale-poller.yml  auto-merge.yml  ban-hardcoded-runner-ip.yml  build-and-push-migrate-image.yml  call-receipt-gate.yml  call-reject-skip.yml  check-handshake.yml  check-instructional-skills.yml  ci.yml  contract-validation.yml  cr-thread-check.yml  cr-thread-gate.yml  deploy-gate-reusable.yml  deploy-gate.yml  docs-validate.yml  handoff-infra-health-gate.yml  hook-log-path-lint.yml  hostile-reviewer.yml  imperative-contract-guard.yml  integration-tests.yml  linear-close-on-merge.yml  main-target-guard.yml  omni-standards-compliance.yml  onex-schema-compat.yml  plugin-compat-gate.yml  pr-title-check.yml  receipt-honesty.yml  reject-deploy-gate-skip.yml  reject-imperative-skills.yml  release-dry-run.yml  release.yml  reviewdog-caller.yml  reviewdog-review.yml  security-scan.yml  session-id-canonical-lint.yml  skill-mcp-ref-lint.yml  stale-todo-gate.yml  todo-audit-on-merge.yml  validate-agent-configs.yml  validate-pr-contracts.yml  (+2 more)
.pre-commit-hooks/: check-expired-shims.sh  check-handoff-infra-health.sh  reject-deploy-gate-skip-token.sh  reject-imperative-skill-patterns.sh  reject-legacy-session-id-reads.sh
app/: main.py
consumers/: DEPLOYMENT_SUCCESS.md  README.md  SUMMARY.md  agent_actions_consumer.py  requirements.txt
contracts/: OMN-10054.yaml  OMN-10120.yaml  OMN-10125.yaml  OMN-10126.yaml  OMN-10135.yaml  OMN-10138.yaml  OMN-10167.yaml  OMN-10270.yaml  OMN-10278.yaml  OMN-10386.yaml  OMN-10424.yaml  OMN-10429.yaml  OMN-10432.yaml  OMN-10433.yaml  OMN-10604.yaml  OMN-10725.yaml  OMN-10744.yaml  OMN-10834.yaml  OMN-11220.yaml  OMN-11221.yaml  OMN-11222.yaml  OMN-11566.yaml  OMN-11599.yaml  OMN-11623.yaml  OMN-11909.yaml  OMN-11917.yaml  OMN-11937.yaml  OMN-11938.yaml  OMN-11940.yaml  OMN-11941.yaml  OMN-11942.yaml  OMN-11970.yaml  OMN-12245.yaml  OMN-12391.yaml  OMN-12394.yaml  OMN-12430.yaml  OMN-12431.yaml  OMN-12637.yaml  OMN-12690.yaml  OMN-12692.yaml  (+9 more)
deployment/: Dockerfile
docs/: INDEX.md  SECURITY.md  TOPICS.md  handoff-publisher-topic-resolution.md  hook-bit-inventory.md
docs/architecture/: AGENT_ROUTING_ARCHITECTURE.md  DELEGATION_ARCHITECTURE.md  EVENT_DRIVEN_ROUTING_PROPOSAL.md  HOOK_DATA_FLOW.md  SERVICE-BOUNDARIES.md  charter.md  skill-lifecycle.md
docs/contracts/: hostile-reviewer-rdjsonl-contract.md
docs/decisions/: 2026-04-23-sibling-plugin-strategy.md  ADR-001-event-fan-out-and-app-owned-catalogs.md  ADR-003-no-fallback-routing.md
docs/demo/: INVESTOR_DEMO.md
docs/events/: EVENT_ALIGNMENT_PLAN.md
docs/feature-dashboard/: feature-dashboard.stable.json
docs/getting-started/: FIRST_HOOK.md  INSTALLATION.md  QUICK_START.md
docs/guides/: ADDING_AN_AGENT.md  ADDING_A_HOOK_HANDLER.md  ADDING_A_SKILL.md
docs/infra/: reviewdog-setup.md
docs/observability/: AGENT_TRACEABILITY.md
docs/plans/: omn-11613-manifest-injector-deletion-plan.md
docs/process/: draft-promotion-procedure.md
docs/reference/: HOOK_LIB_REFERENCE.md  NODE_BEHAVIOR_MAP.md  PR_VALIDATION_PATH.md  SKILL_AUTHORING_GUIDE.md
docs/research/: 2026-05-06-hook-result-injection-proof.md
docs/standards/: TEST_DISCIPLINE.md
docs/templates/: skill_node_contract.yaml.template
docs/tracking/: omn-9353-implementation.md
plugins/.claude-plugin/: marketplace.json
plugins/onex/: .env.example  CONTAINER_INSTALL.md  ENVIRONMENT_VARIABLES.md  GETTING_STARTED.md  README.md  WORKSPACE_SETUP.md  plugin-compat.yaml
scripts/: add_skill_metadata.py  apply_branch_protection.sh  audit_skill_shims.py  auto_generate_skill_nodes.py  check-skill-monorepo-refs.sh  check-unresolved-threads.sh  check_arch_invariants.py  check_closeout_phase_compliance.py  check_hook_event_names.sh  check_local_paths.py  check_local_paths_wrapper.sh  check_no_cloud_bus_wrapper.sh  check_self_gating_workflows.py  ci-recovery-overnight.plist  closeout-phase-contract.yaml  codex-session-scanner.sh  cron-201-baseline.sh  cron-buildloop.sh  cron-closeout.sh  cron-contract-verify.sh  cron-dispatch-engine.sh  cron-idle-watchdog.sh  cron-merge-sweep.sh  cron-overseer-verify.sh  cron-quick-merge.sh  cron-unstick-queue.sh  debug_loop_cli.py  demo_runner.py  dod-pre-push-check.sh  env_validation.py  extract_skill_claims.py  generate_skill_node.py  headless-emit-wrapper.sh  headless-merge-sweep.sh  init-db.sh  install-delegation.sh  lint_skill_mcp_refs.py  materialize-dod-evidence-from-occ.sh  nightly-merge-sweep.sh  opencode-session-scanner.sh  (+21 more)
scripts/ci/: check_env_var_registry.py  detect_test_paths.py  run_aislop_precommit.py  run_aislop_sweep.py  run_golden_chain_live.py  test_selection_adjacency.yaml  test_selection_loader.py  test_selection_models.py
scripts/deploy-gate/: checkout-occ-contracts.sh
scripts/git-hooks/: post-merge
scripts/launchd/: ai.omninode.201-baseline.plist  ai.omninode.buildloop.plist  ai.omninode.contract-verify.plist  ai.omninode.cron-closeout.plist  ai.omninode.dispatch-engine.plist  ai.omninode.idle-watchdog.plist  ai.omninode.merge-sweep.plist  ai.omninode.nightly-merge-sweep.plist  ai.omninode.overseer-verify.plist  ai.omninode.quick-merge.plist  ai.omninode.unstick-queue.plist
scripts/lib/: canonical-clone-preflight.sh  file-stall-tickets.sh  run-stall-detector.py  run-unstick-queue.py
scripts/observability/: monitor_routing_health.sh
scripts/tests/: test-queue-heal.sh  (+4 more)
shared_lib/: kafka_config.py
tests/: conftest.py  constants.py  test_dependencies.py  test_disabled_pattern_filter.py  test_watchdog_state.py  validate_event_integration.py  validate_ledger_stop_reasons.py
(+2288 files in other folders)
