# SPDX-FileCopyrightText: 2025 OmniNode.ai Inc.
# SPDX-License-Identifier: MIT

[project]
name = "omninode-claude"
version = "0.7.1"
description = "Claude Code hooks + learning loop integration"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "OmniNode.ai", email = "contact@omninode.ai" }]
keywords = ["omninode", "claude", "plugin", "hooks", "skills", "onex", "agents"]
dependencies = [
    "omnibase-core==0.26.0",
    "omnibase-spi==0.16.1",
    "omnibase-infra==0.19.0",
    "omninode-intelligence==0.13.1",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "cachetools>=5.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
# aiokafka is optional: event publishers gracefully degrade when not installed.
# Minimum version 0.11.0 required for Python 3.12 support.
kafka = [
    "aiokafka>=0.11.0,<0.14.0",
    "confluent-kafka>=2.12.0,<3.0.0",
]

# otel is optional: Phoenix OTEL span exporter (OMN-2734).
# Hooks degrade gracefully (no-op) when these are not installed.
otel = [
    "opentelemetry-api>=1.23.0,<2.0.0",
    "opentelemetry-sdk>=1.23.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.23.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-split>=0.8.0",
    "ruff>=0.14.0",
    "mypy>=1.17.0",
    "pyright>=1.1.0",
    "black>=24.0.0",
    "coverage[toml]>=7.4.0",
    "psutil>=5.9.0",
    "kafka-python>=2.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-psutil>=7.2.1.20260116",
    "types-psycopg2>=2.9.21.20251012",
    "types-docker>=7.1.0.20260109",
    "bandit>=1.9.3",
    # OTEL SDK for phoenix_otel_exporter tests
    "opentelemetry-api>=1.23.0,<2.0.0",
    "opentelemetry-sdk>=1.23.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.23.0,<2.0.0",
]

[project.scripts]
omniclaude-emit = "omniclaude.hooks.cli_emit:main"
omni-patterns = "omniclaude.cli.patterns:main"

[project.entry-points."onex.domain_plugins"]
claude = "omniclaude.runtime.plugin:PluginClaude"

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omniclaude"
Repository = "https://github.com/OmniNode-ai/omniclaude"
Documentation = "https://github.com/OmniNode-ai/omniclaude/tree/main/docs"
Issues = "https://github.com/OmniNode-ai/omniclaude/issues"
Changelog = "https://github.com/OmniNode-ai/omniclaude/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniclaude"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "**/archived/**",
    "**/archive/**",
    "**/__pycache__/**",
    "**/site-packages/**",
    "_archive/**",
    "src/omniclaude/lib/**",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
# NOTE: I001 (isort import ordering) is NOT ignored - it is enforced globally via "I" in select
ignore = [
    # ============================================================================
    # INTENTIONAL DESIGN DECISIONS (not technical debt)
    # ============================================================================
    "S101",      # Allow assert statements (used in tests and runtime invariants)
    "ISC001",    # Implicit string concatenation (conflicts with ruff formatter)
    "PLC0415",   # Import not at top-level (intentional lazy imports for performance)
    "PLW0603",   # Global statement (intentional caching/singleton patterns)
    "PLW1641",   # Missing __hash__ (Pydantic models are intentionally unhashable)
    "B010",      # setattr with constant (intentional dynamic attribute setting)
    "B027",      # Empty method without abstract (intentional hook/callback stubs)
    "RUF006",    # Dangling task (async fire-and-forget is intentional)
    "E712",      # Comparison to True/False (intentional for SQLAlchemy filters)
    "PLR0402",   # Use from import (style preference, explicit imports preferred)

    # ============================================================================
    # COMPLEXITY METRICS (architectural - requires refactoring to fix)
    # ============================================================================
    "C901",      # Function complexity - TODO: Refactor complex functions
    "PLR0911",   # Too many returns - TODO: Simplify return paths
    "PLR0912",   # Too many branches - TODO: Reduce branching complexity
    "PLR0913",   # Too many arguments - TODO: Use config objects
    "PLR0915",   # Too many statements - TODO: Extract helper functions
    "PLR0917",   # Too many positional arguments - TODO: Use keyword-only args

    # ============================================================================
    # CODE STYLE (low priority - fix incrementally)
    # ============================================================================
    "E501",      # Line too long - TODO: Enable after codebase cleanup
    "E402",      # Module level import not at top - TODO: Reorganize imports
    "N802",      # Invalid function name - legacy naming conventions
    "N803",      # Argument is mixedCase - legacy naming conventions
    "N806",      # Variable naming - legacy naming conventions
    "N812",      # Lowercase imported as non-lowercase - legacy naming conventions
    "N815",      # Variable is mixedCase - legacy naming conventions
    "N818",      # Exception name without Error suffix - legacy naming
    "COM812",    # Trailing commas - TODO: Fix incrementally
    "RUF003",    # Comment formatting - minor style issue
    "RUF010",    # Use explicit conversion flag - minor style issue
    "RUF022",    # Unsorted dunder all - minor style issue
    "PIE790",    # Unnecessary pass statement - minor style issue
    "UP015",     # Redundant open modes - minor style issue
    "UP039",     # Unnecessary parentheses after class definition - minor style issue

    # ============================================================================
    # EXCEPTION HANDLING (fix incrementally - improves error messages)
    # ============================================================================
    "BLE001",    # Blind exception catching - TODO: Catch specific exceptions
    "EM101",     # Exception string literal - TODO: Use exception variables
    "EM102",     # Exception f-string literal - TODO: Use exception variables
    "TRY002",    # Create your own exception - TODO: Define custom exceptions
    "TRY003",    # Long exception messages - TODO: Move to exception classes
    "TRY004",    # Exception type preference - TODO: Use more specific types
    "TRY201",    # Use raise without specifying exception name - TODO: Fix
    "TRY203",    # Redundant exception handler - TODO: Simplify handlers
    "TRY300",    # Consider else block - TODO: Use try/except/else
    "TRY301",    # Raise within try - TODO: Restructure exception flow
    "TRY400",    # Use logging.exception instead of logging.error - TODO: Fix
    "TRY401",    # Verbose log message - TODO: Simplify log messages
    "B904",      # raise from - TODO: Add exception chaining
    "E722",      # Bare except - TODO: Catch specific exceptions

    # ============================================================================
    # RETURN STATEMENTS (fix incrementally - improves readability)
    # ============================================================================
    "RET503",    # Implicit return - TODO: Add explicit return None
    "RET504",    # Unnecessary assign - TODO: Return directly
    "RET505",    # Unnecessary elif - TODO: Use early returns
    "RET507",    # Unnecessary else after continue - TODO: Simplify

    # ============================================================================
    # SIMPLIFICATION (fix incrementally - improves readability)
    # ============================================================================
    "SIM101",    # Duplicate isinstance call - TODO: Combine isinstance calls
    "SIM102",    # Nested if statements - TODO: Flatten conditionals
    "SIM103",    # Needless bool - TODO: Simplify boolean expressions
    "SIM105",    # contextlib.suppress - TODO: Use suppress context manager
    "SIM108",    # If else block instead of if exp - TODO: Use ternary
    "SIM110",    # Reimplemented builtin - TODO: Use builtin functions
    "SIM117",    # Nested with statements - TODO: Combine with statements
    "SIM118",    # Use key in dict instead of key in dict.keys() - TODO: Fix
    "PLR1714",   # Repeated equality comparison - TODO: Use in operator
    "PLR1730",   # Replace if with max/min call - TODO: Use max/min
    "PLR5501",   # Use elif instead of else then if - TODO: Flatten
    "PIE810",    # Call startswith once with tuple - TODO: Combine calls

    # ============================================================================
    # TYPE CHECKING IMPORTS (low priority - mostly style)
    # ============================================================================
    "TC001",     # Type checking imports - TODO: Move to TYPE_CHECKING block
    "TC003",     # Type checking imports - TODO: Move to TYPE_CHECKING block
    "TC004",     # Type checking imports - TODO: Move to TYPE_CHECKING block
    "TC005",     # Empty type-checking block - TODO: Remove empty blocks

    # ============================================================================
    # DATETIME HANDLING (fix incrementally - improves timezone safety)
    # ============================================================================
    "DTZ001",    # Call datetime without tzinfo - TODO: Add timezone info
    "DTZ003",    # datetime.utcnow without tz - TODO: Use timezone-aware
    "DTZ005",    # datetime.now() without tz - TODO: Add timezone info
    "DTZ901",    # datetime.min without tz - used in test sentinels

    # ============================================================================
    # PATH HANDLING (fix incrementally - modernize to pathlib)
    # ============================================================================
    "PTH100",    # os.path.abspath() vs Path.resolve() - TODO: Migrate to pathlib
    "PTH103",    # os.makedirs vs Path.mkdir - TODO: Migrate to pathlib
    "PTH109",    # os.getcwd() vs Path.cwd() - TODO: Migrate to pathlib
    "PTH110",    # os.path.exists vs Path.exists - TODO: Migrate to pathlib
    "PTH111",    # os.path.expanduser() vs Path.expanduser() - TODO: Migrate
    "PTH116",    # os.stat vs Path.stat - TODO: Migrate to pathlib
    "PTH118",    # os.path.join() vs Path / - TODO: Migrate to pathlib
    "PTH119",    # os.path.basename() vs Path.name - TODO: Migrate to pathlib
    "PTH120",    # os.path.dirname() vs Path.parent - TODO: Migrate to pathlib
    "PTH123",    # Path.open() - TODO: Migrate to pathlib

    # ============================================================================
    # BOOLEAN ARGUMENTS (fix incrementally - improves API clarity)
    # ============================================================================
    "FBT001",    # Boolean positional args - TODO: Use keyword-only
    "FBT002",    # Boolean default args - TODO: Use keyword-only
    "FBT003",    # Boolean positional value in call - TODO: Use keywords

    # ============================================================================
    # UNUSED CODE (fix incrementally - cleanup dead code)
    # ============================================================================
    "F841",      # Unused variable - TODO: Remove or use underscore prefix
    "ARG001",    # Unused function argument - TODO: Remove or use underscore
    "ARG002",    # Unused method argument - TODO: Remove or use underscore
    "ARG003",    # Unused class method argument - TODO: Remove or use underscore
    "ARG005",    # Unused lambda argument - TODO: Remove or use underscore
    "ERA001",    # Commented out code - TODO: Remove dead code
    "RUF100",    # Unused noqa directive - TODO: Remove stale directives

    # ============================================================================
    # LOOP VARIABLES (fix incrementally)
    # ============================================================================
    "B007",      # Unused loop variable - TODO: Use underscore prefix
    "B023",      # Function defined in loop - TODO: Extract function
    "B909",      # Mutation of iterator - TODO: Use copy or different approach
    "PLW2901",   # Redefined loop name - TODO: Use different variable names
    "PLR1736",   # List index lookup in enumerate loop - TODO: Use enumerate value

    # ============================================================================
    # BUILTIN SHADOWING (fix incrementally)
    # ============================================================================
    "A001",      # Builtin variable shadowing - TODO: Rename variables
    "A002",      # Builtin shadowing argument - TODO: Rename arguments
    "A003",      # Builtin shadowing class attribute - TODO: Rename attributes

    # ============================================================================
    # PYTEST (fix incrementally)
    # ============================================================================
    "PT011",     # Pytest raises too broad - TODO: Add match parameter
    "PT012",     # Pytest raises with multiple statements - TODO: Split tests
    "PT015",     # Pytest assert always false - TODO: Fix test logic
    "PT017",     # pytest.raises in except - TODO: Restructure test
    "PT018",     # Assertion breakdown - TODO: Split assertions
    "PT019",     # Pytest fixture without value - TODO: Add return value

    # ============================================================================
    # LOGGING (fix incrementally)
    # ============================================================================
    "G004",      # Logging f-string - TODO: Use % formatting or extra
    "G101",      # Logging extra field clash - TODO: Rename field
    "G201",      # Use logging.exception instead of .error with exc_info - TODO: Fix
    "T201",      # Print statements - TODO: Replace with logging

    # ============================================================================
    # MISCELLANEOUS TECHNICAL DEBT
    # ============================================================================
    "B008",      # Function call in defaults - TODO: Use default_factory
    "B011",      # Assert false - TODO: Remove or use proper error
    "B017",      # Assert raises exception - TODO: Use pytest.raises
    "B019",      # Cached instance method - TODO: Use functools.cached_property
    "B905",      # zip() without strict parameter - TODO: Add strict=True
    "E711",      # None comparison - TODO: Use is None
    "E721",      # Type comparisons - TODO: Use isinstance()
    "EXE001",    # Shebang without executable - TODO: Add execute permission
    "F403",      # Star import - TODO: Use explicit imports
    "INP001",    # Implicit namespace package - TODO: Add __init__.py
    "PLR2004",   # Magic values - TODO: Use named constants
    "PLR1722",   # Sys exit alias - TODO: Use sys.exit()
    "RUF005",    # Collection literal concatenation - TODO: Use spread operator
    "RUF012",    # Mutable class default - TODO: Use field(default_factory=)
    "SLF001",    # Private member access - TODO: Use public API
    "PERF401",   # Use list comprehension - TODO: Convert to comprehension

    # ============================================================================
    # SECURITY - SUBPROCESS (review case-by-case, use noqa when safe)
    # NOTE: These are globally ignored but should be reviewed per-occurrence
    # ============================================================================
    "S404",      # Subprocess module import - safe to import, review usage
    "S603",      # Subprocess without shell - actually safer than with shell
    "S607",      # Start process with partial path - TODO: Use full paths

    # ============================================================================
    # SECURITY - ERROR HANDLING (review case-by-case)
    # NOTE: These can mask errors, review each occurrence
    # ============================================================================
    "S110",      # Try except pass - TODO: Log errors at minimum
    "S112",      # Try except continue - TODO: Log errors at minimum

    # ============================================================================
    # SECURITY - DATA HANDLING (moved to per-file-ignores for tests)
    # NOTE: S105, S106, S107, S108, S104, S311, S324 are in per-file-ignores
    # ============================================================================
    "S301",      # Suspicious serialization (pickle) - TODO: Review each usage
    "S602",      # Subprocess call with shell=True - TODO: Avoid shell=True
    "S608",      # SQL injection - false positives, use noqa when safe

    # ============================================================================
    # CORRECTNESS - CRITICAL (should fix soon)
    # NOTE: F821 is critical but kept to avoid build breakage
    # ============================================================================
    "F821",      # Undefined name - CRITICAL: Fix ASAP, can cause runtime errors
]

[tool.ruff.lint.per-file-ignores]
# Test files can use hardcoded passwords/secrets in fixtures
"tests/**/*.py" = [
    "E402",      # Module level import not at top
    "DTZ007",    # Datetime strptime without zone
    "S104",      # Possible binding to all interfaces (test servers)
    "S105",      # Hardcoded password string (test fixtures)
    "S106",      # Hardcoded password argument (test fixtures)
    "S107",      # Possible hardcoded password default (test fixtures)
    "S108",      # Probable insecure temp file (test fixtures)
    "S311",      # Non-cryptographic random (OK for tests)
    "S324",      # Insecure hash function (OK for tests)
    "PT009",     # unittest-style assertEqual (test_bash_guard.py uses hybrid unittest/pytest)
    "RUF059",    # Unused unpacked variable (test helper _FakeThread captures args by design)
]
"tests/*.py" = ["E402"]
# Skill test directories use hyphenated names (matching skill names) — N999 invalid module name is expected
"tests/skills/gather-github-stats/*.py" = ["N999"]
# Note: src/omniclaude/lib/ is fully excluded in [tool.ruff] exclude - legacy code, will be deleted post-Beta

[tool.ruff.lint.isort]
known-first-party = ["omniclaude"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["src/omniclaude/lib/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that may require external services",
    "slow: Slow tests that may take significant time to run",
    "requires_postgres: Tests requiring PostgreSQL connection",
]
filterwarnings = [
    # Tests that mock _run_async to intercept calls produce an unawaited-coroutine
    # warning for _check_llm_health.  The warning is benign: the mock consumes the
    # coroutine argument without awaiting it, which is intentional in those tests.
    # Scoped to the specific test module to avoid masking real warnings elsewhere.
    "ignore:coroutine '_check_llm_health' was never awaited:RuntimeWarning:tests.lib.core.test_route_via_events_wrapper",  # intentional: mock intercepts coroutine before await
]
